Fixing style when leader search box is too big

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,7 @@ a {
 }
 
 .container {
+    min-height: calc(100vh - 48px);
     width: 820px;
     margin: 0 auto;
     overflow: auto;
